--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
       "@adonisjs/core",
       "@adonisjs/repl",
       "@japa/preset-adonis/build/adonis-typings",
-      "@adonisjs/lucid"
+      "@adonisjs/lucid",
     ]
   }
 }
