update: readme.md

--- a/.env.docker
+++ b/.env.docker
@@ -5,7 +5,7 @@ NODE_ENV=development
 APP_KEY=xlS44KLumzfxAzf9Zs-1XJ4xaHA275DZ
 DRIVE_DISK=local
 DB_CONNECTION=mysql
-MYSQL_HOST=localhost
+MYSQL_HOST=database
 MYSQL_PORT=3306
 MYSQL_USER=lucid
 MYSQL_PASSWORD=lucid
