--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,23 @@
 services:
+  app:
+    build: .
+    ports:
+      - 3333:3333
+    depends_on:
+      - database
+    env_file:
+      - .env.docker
+
   database:
     image: mysql:latest
     container_name: be-challenge-db
     volumes:
       - mysql-data:/var/lib/mysql
-    ports:
-      - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=secret
-      - MYSQL_DATABASE=lucid
       - MYSQL_USER=lucid
       - MYSQL_PASSWORD=lucid
+      - MYSQL_DATABASE=lucid
 
 volumes:
   mysql-data:
