fix: docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     ports:
       - 3333:3333
     depends_on:
+      - migration
       - database
     env_file:
       - .env.docker
@@ -19,5 +20,12 @@ services:
       - MYSQL_PASSWORD=lucid
       - MYSQL_DATABASE=lucid
 
+  migration:
+    build: .
+    depends_on:
+      - database
+    env_file:
+      - .env.docker
+    entrypoint: node ace migration:fresh
 volumes:
   mysql-data:
