--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,24 @@
+version: '3.9'
+
 services:
   app:
     build: .
     ports:
       - 3333:3333
     depends_on:
-      - migration
-      - database
+      migration:
+        condition: service_completed_successfully
     env_file:
       - .env.docker
 
   database:
     image: mysql:latest
     container_name: be-challenge-db
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 3s
+      timeout: 2s
+      retries: 10
     volumes:
       - mysql-data:/var/lib/mysql
     environment:
@@ -22,10 +29,11 @@ services:
 
   migration:
     build: .
+    command: node ace migration:run
     depends_on:
-      - database
+      database:
+        condition: service_healthy
     env_file:
       - .env.docker
-    entrypoint: node ace migration:fresh
 volumes:
   mysql-data:
